# amq-qpid-proton-playground

./: CMakeLists.txt  Dockerfile  docker-compose.yaml
src/: CMakeLists.txt  main.cpp
src/amq_communication/: CMakeLists.txt  amq_container.cpp  amq_container.h
